[package]
name = "bound_engine"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
winit = "0.28.3"
winit_event_helper = "0.5.0"
glam = "0.23.0"
fps_counter = "2.0.0"
image = "0.24.6"
rand_distr = "0.4.3"
rand = "0.8.5"
