[package]
name = "bound_engine"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.15.1", features = ["naga", "glsl"] }
naga = "0.11.0"
pollster = "0.3.0"
winit = "0.28.3"
winit_event_helper = { git = "https://github.com/IvoteSligte/winit_event_helper" }
glam = "0.23.0"
fps_counter = "2.0.0"
rand_distr = "0.4.3"
rand = "0.8.5"
