[package]
name = "bound_engine"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
bytemuck = "1.13.1"
winit = "0.28.3"
winit_event_helper = "0.5.0"
glam = "0.23.0"
fps_counter = "2.0.0"
image = "0.24.6"
itertools = "0.10.5"
petgraph = "0.6.3"
